--- a/package.json
+++ b/package.json
@@ -9,18 +9,51 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
+    "@prisma/client": "^5.16.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@vis.gl/react-google-maps": "^1.1.0",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.1.5",
+    "embla-carousel-react": "^8.1.5",
+    "fs": "^0.0.1-security",
+    "i18next": "^23.11.5",
+    "lucide-react": "^0.396.0",
+    "mysql": "^2.18.1",
+    "net": "^1.0.2",
+    "next": "14.2.4",
+    "next-intl": "^3.15.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-i18next": "^14.1.2",
+    "react-icons": "^5.2.1",
+    "recharts": "^2.13.0-alpha.4",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tls": "^0.0.1",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "prisma": "^5.16.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
